# python-test

./: .gitignore  makefile  pyproject.toml
python_test/: capitalize.py
tests/: test_capitalize.py
