[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Oleja Iv <oleg1242@gmail.com>"]
readme = "README.md"
packages = [{include = "python_test"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
